// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/map renders correctly 1`] = `
<div
  className="box"
>
  <nav
    className="headerNav"
  >
    <div
      className="container "
    >
      <div
        className="flexContainer"
      >
        <a
          href="/"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <div
            className="item"
          >
            <span>
              iidx.io
            </span>
          </div>
        </a>
        <div
          className="item"
        >
          loading
        </div>
      </div>
    </div>
  </nav>
  <div
    className="content"
  >
    <div
      className="user-profile-header-wrapper"
    >
      <div
        className="container "
      >
        <div
          className="user-profile-header"
        >
          <div
            className="user-profile-content"
          >
            <div
              className="user-avatar"
            />
            <h2>
              @
              user
            </h2>
          </div>
        </div>
        <div
          className="tabs-wrapper"
        >
          <ul
            className="tabs"
          >
            <li
              className="tab-item"
            >
              <a
                href="/@user/sp"
                onClick={[Function]}
                onMouseEnter={[Function]}
              >
                <span
                  className="icon-text"
                >
                  Overview
                </span>
              </a>
            </li>
            <li
              className="tab-item active"
            >
              <a
                href="/@user/sp/musics"
                onClick={[Function]}
                onMouseEnter={[Function]}
              >
                <span
                  className="icon-text"
                >
                  Musics
                </span>
              </a>
            </li>
            <li
              className="tab-item"
            >
              <a
                href="/@user/sp/stats"
                onClick={[Function]}
                onMouseEnter={[Function]}
              >
                <span
                  className="icon-text"
                >
                  Stats
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      className="container "
    >
      <div
        className="position-relative-container"
      >
        <ol
          className="breadcrumb breadcrumb"
        >
          <li
            className="breadcrumb-item"
          >
            <a
              href="/@user/sp/musics"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Musics
            </a>
          </li>
          <li
            className="breadcrumb-item active"
          >
            <span>
              title [SPA]
            </span>
          </li>
        </ol>
      </div>
    </div>
    <div
      className="container "
    >
      <div
        className="box box map-detail"
      >
        <div
          className="music-data"
        >
          <div
            className="genre"
          >
            genre
          </div>
          <h2
            className="title"
          >
            title
          </h2>
          <div
            className="artist"
          >
            artist
          </div>
        </div>
        <ul>
          <li>
            <div
              className="difficulty-area difficulty-another"
            >
              <span
                className="level"
              >
                ☆
                12
              </span>
              <span
                className="difficulty"
              >
                SP
                 
                ANOTHER
              </span>
            </div>
          </li>
        </ul>
        <table
          className="map-data-table"
        >
          <tbody>
            <tr>
              <th>
                BPM
              </th>
              <td>
                <div
                  className="bpm"
                >
                  100-400
                </div>
              </td>
            </tr>
            <tr>
              <th>
                Notes
              </th>
              <td>
                1000
              </td>
            </tr>
            <tr>
              <th>
                TexTage
              </th>
              <td>
                <ul
                  className="textage-links"
                >
                  <li>
                    <a
                      href="http://textage.cc/score/1/textageUid.html?1AC00"
                    >
                      1P
                    </a>
                  </li>
                  <li>
                    <a
                      href="http://textage.cc/score/1/textageUid.html?2AC00"
                    >
                      2P
                    </a>
                  </li>
                </ul>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        className="box box"
      >
        <div
          className="box-header"
        >
          <h2>
            Best Score
          </h2>
        </div>
        <div
          className="data-box-wrapper"
        >
          <div
            className="clear-lamp full-combo"
          />
          <div
            className="data-box"
          >
            <div
              className="data-box-content"
            >
              <div
                className="score-box-wrapper"
              >
                <dl
                  className="score-box"
                >
                  <div
                    className="data-list ex-score"
                  >
                    <dt>
                      EX-SCORE
                    </dt>
                    <dd>
                      <div
                        className="score-info"
                      >
                        <div
                          className="score-text"
                        >
                          2000
                        </div>
                        <div
                          className="score-diff-info positive"
                        >
                          <div
                            className="score-text"
                          >
                            +1
                          </div>
                        </div>
                      </div>
                      <div
                        className="score-info"
                      >
                        <div
                          className="score-rate"
                        >
                          (
                          100.00
                           %)
                        </div>
                        <div
                          className="score-diff-info positive"
                        >
                          <div
                            className="score-rate"
                          >
                            (
                            +0.05
                             %)
                          </div>
                        </div>
                      </div>
                    </dd>
                  </div>
                  <div
                    className="wrapper"
                  >
                    <div
                      className="progress grade-aaa full-combo"
                      style={
                        Object {
                          "width": "100%",
                        }
                      }
                    />
                    <div
                      className="target grade-a"
                    />
                    <div
                      className="target grade-aa"
                    />
                    <div
                      className="target grade-aaa"
                    />
                  </div>
                </dl>
                <div
                  className="additional-area"
                >
                  <dl
                    className="data-list"
                  >
                    <dt>
                      BPI
                    </dt>
                    <dd
                      className="bpi"
                    >
                      <span>
                        10.00
                      </span>
                      <span
                        className="score-diff-info positive"
                      >
                        (
                        +1.00
                        )
                      </span>
                    </dd>
                  </dl>
                  <dl
                    className="data-list clear-type"
                  >
                    <dt>
                      CLEAR TYPE
                    </dt>
                    <dd>
                      <div
                        className="moderate ex-hard-clear"
                      >
                        EX-HARD
                      </div>
                      <div
                        className="moderate clear-type-diff-icon"
                      >
                        <svg
                          aria-hidden="true"
                          className="svg-inline--fa fa-angle-right fa-w-8 "
                          data-icon="angle-right"
                          data-prefix="fas"
                          focusable="false"
                          role="img"
                          style={Object {}}
                          viewBox="0 0 256 512"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                            fill="currentColor"
                            style={Object {}}
                          />
                        </svg>
                      </div>
                      <div
                        className="moderate full-combo"
                      >
                        FULL COMBO
                      </div>
                    </dd>
                  </dl>
                  <dl
                    className="data-list"
                  >
                    <dt>
                      LAST PLAY
                    </dt>
                    <dd>
                      -
                    </dd>
                  </dl>
                </div>
              </div>
              <div
                className="symbol-area"
              >
                <div
                  className="grade-box"
                >
                  <div
                    className="current-grade"
                  >
                    AAA
                  </div>
                  <div
                    className="around-grade"
                  >
                    MAX
                     
                    -100
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="box box"
      >
        <div
          className="box-header"
        >
          <h2>
            Score Trends
          </h2>
        </div>
        <div
          className="chart-wrapper"
        >
          <div
            className="chart-container"
          >
            <div
              className="recharts-responsive-container"
              style={
                Object {
                  "height": 300,
                  "maxHeight": undefined,
                  "minHeight": undefined,
                  "minWidth": undefined,
                  "width": "100%",
                }
              }
            >
              <div
                style={
                  Object {
                    "display": "none",
                    "height": 0,
                    "position": "absolute",
                    "visibility": "hidden",
                    "width": 0,
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <footer
    className="box"
  >
    <div
      className="container "
    >
      <div
        className="inner"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-copyright fa-w-16 "
          data-icon="copyright"
          data-prefix="far"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 448c-110.532 0-200-89.451-200-200 0-110.531 89.451-200 200-200 110.532 0 200 89.451 200 200 0 110.532-89.451 200-200 200zm107.351-101.064c-9.614 9.712-45.53 41.396-104.065 41.396-82.43 0-140.484-61.425-140.484-141.567 0-79.152 60.275-139.401 139.762-139.401 55.531 0 88.738 26.62 97.593 34.779a11.965 11.965 0 0 1 1.936 15.322l-18.155 28.113c-3.841 5.95-11.966 7.282-17.499 2.921-8.595-6.776-31.814-22.538-61.708-22.538-48.303 0-77.916 35.33-77.916 80.082 0 41.589 26.888 83.692 78.277 83.692 32.657 0 56.843-19.039 65.726-27.225 5.27-4.857 13.596-4.039 17.82 1.738l19.865 27.17a11.947 11.947 0 0 1-1.152 15.518z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
         
        2018
         iidx.io |
         
        test
      </div>
    </div>
  </footer>
</div>
`;

exports[`/map renders correctly if there are errors 1`] = `null`;

exports[`/map renders correctly when loading 1`] = `
<div
  className="box"
>
  <nav
    className="headerNav"
  >
    <div
      className="container "
    >
      <div
        className="flexContainer"
      >
        <a
          href="/"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <div
            className="item"
          >
            <span>
              iidx.io
            </span>
          </div>
        </a>
        <div
          className="item"
        >
          loading
        </div>
      </div>
    </div>
  </nav>
  <div
    className="content"
  >
    <div
      className="user-profile-header-wrapper"
    >
      <div
        className="container "
      >
        <div
          className="user-profile-header"
        >
          <div
            className="user-profile-content"
          >
            <div
              className="user-avatar"
            />
            <h2>
              @
              user
            </h2>
          </div>
        </div>
        <div
          className="tabs-wrapper"
        >
          <ul
            className="tabs"
          >
            <li
              className="tab-item"
            >
              <a
                href="/@user/sp"
                onClick={[Function]}
                onMouseEnter={[Function]}
              >
                <span
                  className="icon-text"
                >
                  Overview
                </span>
              </a>
            </li>
            <li
              className="tab-item active"
            >
              <a
                href="/@user/sp/musics"
                onClick={[Function]}
                onMouseEnter={[Function]}
              >
                <span
                  className="icon-text"
                >
                  Musics
                </span>
              </a>
            </li>
            <li
              className="tab-item"
            >
              <a
                href="/@user/sp/stats"
                onClick={[Function]}
                onMouseEnter={[Function]}
              >
                <span
                  className="icon-text"
                >
                  Stats
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      className="container "
    >
      <div
        className="box box map-detail"
      >
        -
      </div>
      <div
        className="box box"
      >
        <div
          className="box-header"
        >
          <h2>
            Best Score
          </h2>
        </div>
        <div
          className="data-box-wrapper"
        >
          <div
            className="clear-lamp loading"
          />
          <div
            className="data-box"
          >
            <div
              className="data-box-content"
            >
              <div
                className="score-box-wrapper"
              >
                <dl
                  className="score-box"
                >
                  <div
                    className="data-list ex-score"
                  >
                    <dt>
                      EX-SCORE
                    </dt>
                    <dd />
                  </div>
                  <div
                    className="wrapper loading"
                  />
                </dl>
                <div
                  className="additional-area"
                >
                  <dl
                    className="data-list"
                  >
                    <dt>
                      BPI
                    </dt>
                    <dd>
                      -
                    </dd>
                  </dl>
                  <dl
                    className="data-list clear-type"
                  >
                    <dt>
                      CLEAR TYPE
                    </dt>
                    <dd>
                      -
                    </dd>
                  </dl>
                  <dl
                    className="data-list"
                  >
                    <dt>
                      LAST PLAY
                    </dt>
                    <dd>
                      -
                    </dd>
                  </dl>
                </div>
              </div>
              <div
                className="symbol-area"
              >
                <div
                  className="grade-box loading"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="box box"
      >
        <div
          className="box-header"
        >
          <h2>
            Score Trends
          </h2>
        </div>
        -
      </div>
    </div>
  </div>
  <footer
    className="box"
  >
    <div
      className="container "
    >
      <div
        className="inner"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-copyright fa-w-16 "
          data-icon="copyright"
          data-prefix="far"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 448c-110.532 0-200-89.451-200-200 0-110.531 89.451-200 200-200 110.532 0 200 89.451 200 200 0 110.532-89.451 200-200 200zm107.351-101.064c-9.614 9.712-45.53 41.396-104.065 41.396-82.43 0-140.484-61.425-140.484-141.567 0-79.152 60.275-139.401 139.762-139.401 55.531 0 88.738 26.62 97.593 34.779a11.965 11.965 0 0 1 1.936 15.322l-18.155 28.113c-3.841 5.95-11.966 7.282-17.499 2.921-8.595-6.776-31.814-22.538-61.708-22.538-48.303 0-77.916 35.33-77.916 80.082 0 41.589 26.888 83.692 78.277 83.692 32.657 0 56.843-19.039 65.726-27.225 5.27-4.857 13.596-4.039 17.82 1.738l19.865 27.17a11.947 11.947 0 0 1-1.152 15.518z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
         
        2018
         iidx.io |
         
        test
      </div>
    </div>
  </footer>
</div>
`;
